# Rust-Diesel-PostgreSQL-Rocket

./: Readme.md
bank_ground/: Cargo.toml  Rocket.toml
bank_ground/site/static/: index.html
bank_ground/src/: error.rs  main.rs  session.rs
db_bank/: Cargo.toml
db_bank/migrations/2022-02-12-204526_create_initial_tables/: down.sql  up.sql
db_bank/src/: lib.rs  models.rs  schema.rs
