[package]
name = "db_bank"
version = "0.1.0"
authors = ["Felipe<anfegu86@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="db_bank"
path="src/lib.rs"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
failure = "0.1.5"
failure_derive = "0.1.5"
bcrypt = "0.10"
